[package]
name = "dcarbon-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dcarbon_contract"

[features]
testing = []
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"]}
anchor-spl = { version = "0.30.0", features = ["token"] }
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
mpl-token-metadata = "4.1.2"